added WebAPI controller for files all uploaded files are kept in separate table Added new role - Doctor

--- a/DentalSystem.Web/Areas/Administrator/Views/Doctors/Index.cshtml
+++ b/DentalSystem.Web/Areas/Administrator/Views/Doctors/Index.cshtml
@@ -15,15 +15,11 @@
     {
         <div class="col-md-6">
             <div class="card">
-                <img class="card-img-top" width="300" height="200" src="/Administrator/Doctors/ViewImage/@item.Id" alt="Card image cap">
+                <img class="card-img-top" width="300" height="200" src="/api/file/@item.File.Id" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title"><strong>@item.Name</strong></h5>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <span class="glyphicon glyphicon-flag"></span>
-                        @item.Address
-                    </li>
                     <li class="list-group-item">
                         <span class="glyphicon glyphicon-phone"></span>
                         @item.Phone
