--- a/DentalSystem.Web/Areas/Administrator/Views/Doctors/Add.cshtml
+++ b/DentalSystem.Web/Areas/Administrator/Views/Doctors/Add.cshtml
@@ -9,23 +9,21 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-area="@DentalSystem.Web.Contants.AreaConstanst.ADMINISTRATOR" asp-action="Add" enctype="multipart/form-data">
+        <form asp-area="@DentalSystem.Web.Contants.Areas.ADMINISTRATOR" asp-action="Add" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
@@ -46,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-area="@DentalSystem.Web.Contants.AreaConstanst.ADMINISTRATOR" asp-action="Index" class="btn btn-default">Back to List</a>
+    <a asp-area="@DentalSystem.Web.Contants.Areas.ADMINISTRATOR" asp-action="Index" class="btn btn-default">Back to List</a>
 </div>
 
 @section Scripts {
