--- a/DentalSystem.Web/Areas/Administrator/Views/Doctors/Add.cshtml
+++ b/DentalSystem.Web/Areas/Administrator/Views/Doctors/Add.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-area="@DentalSystem.Web.Contants.Areas.ADMINISTRATOR" asp-action="Add" enctype="multipart/form-data">
+        <form asp-area="@DentalSystem.Common.Contants.Areas.ADMINISTRATOR" asp-action="Add" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -44,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-area="@DentalSystem.Web.Contants.Areas.ADMINISTRATOR" asp-action="Index" class="btn btn-default">Back to List</a>
+    <a asp-area="@DentalSystem.Common.Contants.Areas.ADMINISTRATOR" asp-action="Index" class="btn btn-default">Back to List</a>
 </div>
 
 @section Scripts {
