identity user - changed with user

--- a/DentalSystem.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DentalSystem.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -14,9 +14,9 @@
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="LoginBindingModel.Username"></label>
-                    <input asp-for="LoginBindingModel.Username" class="form-control" />
-                    <span asp-validation-for="LoginBindingModel.Username" class="text-danger"></span>
+                    <label asp-for="LoginBindingModel.EmailAddress"></label>
+                    <input asp-for="LoginBindingModel.EmailAddress" class="form-control" />
+                    <span asp-validation-for="LoginBindingModel.EmailAddress" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="LoginBindingModel.Password"></label>
