--- a/DentalSystem.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DentalSystem.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,9 +13,9 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="RegisterBindingModel.Username"></label>
-                <input asp-for="RegisterBindingModel.Username" class="form-control" />
-                <span asp-validation-for="RegisterBindingModel.Username" class="text-danger"></span>
+                <label asp-for="RegisterBindingModel.Name"></label>
+                <input asp-for="RegisterBindingModel.Name" class="form-control" />
+                <span asp-validation-for="RegisterBindingModel.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RegisterBindingModel.PhoneNumber"></label>
