--- a/DentalSystem.Web/Views/Shared/_Layout.cshtml
+++ b/DentalSystem.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top navbar">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -26,11 +26,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">DentalSystem</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
+                    DentalSystem
+                    @if (this.User.IsInRole(Roles.ADMINISTRATOR))
+                    {
+                        <span>(Administrator)</span>
+                    }
+                    else if (this.User.IsInRole(Roles.DOCTOR))
+                    {
+                        <span>(Doctor)</span>
+                    }
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="@Areas.ADMINISTRATOR" asp-controller="Doctors" asp-action="Add">Add Doctor</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
@@ -42,6 +52,7 @@
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
+        <partial name="_NotificationPartial" />
         @RenderBody()
         <hr />
         <footer>
