--- a/DentalSystem.Web/Views/_ViewImports.cshtml
+++ b/DentalSystem.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using DentalSystem
-@using DentalSystem.Models
+﻿@using DentalSystem.Models
+@using DentalSystem.Common.Contants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
