--- a/DentalSystem.Web/Areas/Administrator/Views/_ViewImports.cshtml
+++ b/DentalSystem.Web/Areas/Administrator/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using DentalSystem.Web.Areas.Administrator
 @using DentalSystem.Models.ViewModels
 @using DentalSystem.Web.Areas.Administrator.Models.BindingModels
+@using DentalSystem.Common.Contants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
