added Index for Appointments

--- a/DentalSystem.Web/Pages/Appointments/Index.cshtml
+++ b/DentalSystem.Web/Pages/Appointments/Index.cshtml
@@ -11,7 +11,17 @@
     <ul>
         @foreach (var item in this.Model.Appointments)
         {
-            Html.DisplayForModel(item);
+            <li>              
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">@item.DateTime </h5>
+                            <h6 class="card-subtitle mb-2 text-muted">@item.DoctorName</h6>
+                            <h6 class="card-subtitle mb-2 text-muted">@item.PatientName</h6>            
+                            <p class="card-body">@item.TotalPrice</p>
+                        </div>
+                    </div>
+                
+            </li>
         }
     </ul>
 }
