changed menu added view for all appointments

--- a/DentalSystem.Web/Areas/Administrator/Views/Doctors/Index.cshtml
+++ b/DentalSystem.Web/Areas/Administrator/Views/Doctors/Index.cshtml
@@ -10,7 +10,7 @@
     <a asp-area="Administrator" asp-action="Add" class="btn btn-default">Add Doctor</a>
 </p>
 
-<div class="row">
+<div class="row card-deck">
     @foreach (var item in Model)
     {
         <div class="col-md-6">
