added AddPatient Form

--- a/DentalSystem.Web/Pages/_ViewImports.cshtml
+++ b/DentalSystem.Web/Pages/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using DentalSystem.Web.Pages.Patients
+@using DentalSystem.Common.Contants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
