--- a/DentalSystem.Web/Views/Shared/_MenuPartial.cshtml
+++ b/DentalSystem.Web/Views/Shared/_MenuPartial.cshtml
@@ -12,16 +12,31 @@
     </li>
 }
 
-@if (this.User.IsInRole(Roles.OFFICE_MANAGER))
+@if (this.User.IsInRole(Roles.ADMINISTRATOR) || this.User.IsInRole(Roles.OFFICE_MANAGER))
 {
     <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="index">
-            Appointments
+        <a class="dropdown-toggle" data-toggle="dropdown" href="/patients/index">
+            Patients
             <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="index">All</a></li>
-            <li><a asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="add">Add</a></li>
+            <li><a asp-page="/patients/index">All</a></li>
+            <li><a asp-page="/patients/add">Add</a></li>
         </ul>
     </li>
 }
+
+<li class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown" asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="index">
+        Appointments
+        <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+        <li><a asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="index">All</a></li>
+        <li><a asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="add">Add</a></li>
+    </ul>
+</li>
+
+
+
+
