--- a/DentalSystem.Web/Views/Shared/_MenuPartial.cshtml
+++ b/DentalSystem.Web/Views/Shared/_MenuPartial.cshtml
@@ -6,8 +6,8 @@
             <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a asp-area="@Areas.ADMINISTRATOR" asp-controller="doctors" asp-action="index">All</a></li>
             <li><a asp-area="@Areas.ADMINISTRATOR" asp-controller="doctors" asp-action="add">Add</a></li>
+            <li><a asp-area="@Areas.ADMINISTRATOR" asp-controller="doctors" asp-action="index">All</a></li>
         </ul>
     </li>
 }
@@ -20,22 +20,25 @@
             <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a asp-page="/patients/index">All</a></li>
             <li><a asp-page="/patients/add">Add</a></li>
+            <li><a asp-page="/patients/index">All</a></li>
         </ul>
     </li>
 }
 
-<li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="index">
-        Appointments
-        <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-        <li><a asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="index">All</a></li>
-        <li><a asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="add">Add</a></li>
-    </ul>
-</li>
+@if (this.User.Identity.IsAuthenticated)
+{
+    <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="index">
+            Appointments
+            <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="add">Add</a></li>
+            <li><a asp-area="@Areas.OFFICE" asp-controller="appointments" asp-action="index">All</a></li>
+        </ul>
+    </li>
+}
 
 
 
