--- a/DentalSystem.Web/Views/Shared/_Layout.cshtml
+++ b/DentalSystem.Web/Views/Shared/_Layout.cshtml
@@ -41,11 +41,21 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <partial name="_MenuPartial" />
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a href="/appointments/add">Make Appointment</a></li>
                 </ul>
+                <div class="col-sm-3 col-md-3">
+                    <form asp-controller="Home" asp-action="Search" class="navbar-form" role="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search" name="searchTerm">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
                 <partial name="_LoginPartial" />
             </div>
+            
         </div>
     </nav>
 
