--- a/DentalSystem.Web/Views/_ViewImports.cshtml
+++ b/DentalSystem.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using DentalSystem.Models
 @using DentalSystem.Common.Contants
+@using DentalSystem.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
